# roguelike-game

./: .gitignore  CMakeLists.txt  FEEDBACK_FROM_TEACHER.md  Makefile  README.md
CMake/: CppLint.cmake
include/: Attributes.h  Camera.h  Exceptions.h  PrototypeTable.h  RoutingMachine.h  StaticStorage.h  Statistics.h  Vector2.h
include/entities/: Chest.h  Coin.h  Enemy.h  Floor.h  Gateway.h  IEntity.h  IItemEntity.h  IMovableEntity.h  IStaticEntity.h  Player.h  Wall.h
include/facades/: Linux.h  NCurses.h
include/screens/: ExitScreen.h  GameScreen.h  IScreen.h  LeaderboardScreen.h  MenuScreen.h  NameInputScreen.h  TitleScreen.h
include/systems/: FileIOSystem.h  InputHandlingSystem.h  LeaderboardSortingSystem.h  MovementSystem.h  RenderSystem.h
misc/cpplint/: README
resources/: exitLogo.txt  startLogo.txt
resources/maps/level_1/: ItemEntities.txt  MovableEntities.txt  StaticEntities.txt
src/: Camera.cpp  Exceptions.cpp  PrototypeTable.cpp  RoutingMachine.cpp  StaticStorage.cpp  Statistics.cpp  main.cpp
src/entities/: Chest.cpp  Coin.cpp  Enemy.cpp  Floor.cpp  Gateway.cpp  Player.cpp  Wall.cpp
src/facades/: NCurses.cpp
src/screens/: ExitScreen.cpp  GameScreen.cpp  LeaderboardScreen.cpp  MenuScreen.cpp  NameInputScreen.cpp  TitleScreen.cpp
src/systems/: FileIOSystem.cpp  InputHandlingSystem.cpp  LeaderboardSortingSystem.cpp  MovementSystem.cpp  RenderSystem.cpp
unused/: Game.cpp  Game.h
unused/ECS/include/ECS/: ComponentManager.h  EntityManager.h  IComponent.h  IEntity.h
unused/ECS/src/ECS/: ComponentManager.cpp  EntityManager.cpp
